Defect fix. For first party medical proposal the insured is embedded within the product and there is always only 1 main product and no riders. Re-adjust input JSON when doing validation using the product-api
